--- a/views/jmain/jmain-namespace.html
+++ b/views/jmain/jmain-namespace.html
@@ -1,46 +1,20 @@
-<li>
-	<h3 class="main">Espacio de Nombres</h3>
-</li>
-<li>
-	<h3 class="title"><i class="fa fa-chevron-right "></i> Assembly()</h3>
-	<div class="content">
-		<p>
-			Nuestro código puede estar mejor estructurado con espacios de nombres, así podemos dividir funcionalidades dentro de la aplicación. Hay diferente formas de crearlos, por ejemplo:
-		</p>
-	<pre><code>var myApp = {};
+<li><h3 class="main">Espacio de Nombres</h3></li><li><h3 class="title"><i class="fa fa-chevron-right"></i> Assembly()</h3><div class="content"><p>Nuestro código puede estar mejor estructurado con espacios de nombres, así podemos dividir funcionalidades dentro de la aplicación. Hay diferente formas de crearlos, por ejemplo:</p><pre><code>var myApp = {};
 myApp.tools = {};
 myApp.tools.fnPrint = function (text) {
 	console.log(text);
 };
-myApp.tools.fnPrint('¡Hola Luna!');</code></pre>
-		<p>
-			La mejor forma para crear espacio de nombres es dentro de una única función, dentro de jmain.js se encuentra la función Assembly la que cual crea un espacio de nombre, por cada instancia de ésta función tendrá una función fnAddNS para crear un nuevo espacio de nombre, la cual recive como parametro el nombre.
-		</p>
-<pre><code>var myApp = new Assembly();
+myApp.tools.fnPrint('¡Hola Luna!');</code></pre><p>La mejor forma para crear espacio de nombres es dentro de una única función, dentro de jmain.js se encuentra la función Assembly la que cual crea un espacio de nombre, por cada instancia de ésta función tendrá una función fnAddNS para crear un nuevo espacio de nombre, la cual recive como parametro el nombre.</p><pre><code>var myApp = new Assembly();
 myApp.fnAddNS('tools');
 myApp.tools.fnPrint = function (text) {
 	console.log(text);
 };
-myApp.tools.fnPrint('¡Hola Luna!');</code></pre>
-		<p>
-			Otra caracteristica de usar espacios de nombre, es encapsular tanto variables como métodos, para esto se puede usar el patrón de diseño modular, para la creación de esta técnica se usa una función autoejecutable.
-		</p>
-<pre><code>var myApp = new Assembly();
+myApp.tools.fnPrint('¡Hola Luna!');</code></pre><p>Otra caracteristica de usar espacios de nombre, es encapsular tanto variables como métodos, para esto se puede usar el patrón de diseño modular, para la creación de esta técnica se usa una función autoejecutable.</p><pre><code>var myApp = new Assembly();
 (function () {
 	this.fnPrint = function (text) {
 		console.log(text);
 	};
 }).call(myApp.fnAddNS('tools'));
-myApp.tools.fnPrint('¡Hola Luna!');</code></pre>			
-	</div>
-</li>
-<li>
-	<h3 class="title"><i class="fa fa-chevron-right "></i> fnImport()</h3>
-	<div class="content">
-		<p>
-			Busca en la variable windows el espacio de nombres ingresado como parámetro, se retornará el objecto que coincida con el valor buscado.
-		</p>
-<pre><code>var myApp = new Assembly();
+myApp.tools.fnPrint('¡Hola Luna!');</code></pre></div></li><li><h3 class="title"><i class="fa fa-chevron-right"></i> fnImport()</h3><div class="content"><p>Busca en la variable windows el espacio de nombres ingresado como parámetro, se retornará el objecto que coincida con el valor buscado.</p><pre><code>var myApp = new Assembly();
 (function () {
 	this.fnPrint = function (text) {
 		console.log(text);
@@ -59,16 +33,7 @@ myApp.tools.fnPrint('¡Hola Luna!');</code></pre>
 	}; // end function
 }).call(myApp.fnAddNS('calc'));
 
-myApp.calc.fnSum(1,1,1);</code></pre>			
-	</div>
-</li>
-<li>
-	<h3 class="title"><i class="fa fa-chevron-right "></i> fnDepenciesTrue()</h3>
-	<div class="content">
-		<p>
-			Verifica si los elementos ingresados como parámetros son diferentes de: <i>null, undefined y 0</i>. Esto para verificar que los elementos importados sean validos.
-		</p>
-<pre><code>var myApp = new Assembly();
+myApp.calc.fnSum(1,1,1);</code></pre></div></li><li><h3 class="title"><i class="fa fa-chevron-right"></i> fnDepenciesTrue()</h3><div class="content"><p>Verifica si los elementos ingresados como parámetros son diferentes de: <i>null, undefined y 0</i>. Esto para verificar que los elementos importados sean validos.</p><pre><code>var myApp = new Assembly();
 /*
 (function () {
 	this.fnPrint = function (text) {
@@ -91,6 +56,4 @@ myApp.calc.fnSum(1,1,1);</code></pre>
 		
 		fnPrint(total);
 	}; // end function
-}).call(myApp.fnAddNS('calc'));</code></pre>			
-	</div>
-</li>
+}).call(myApp.fnAddNS('calc'));</code></pre></div></li>
