--- a/views/jspinner/jspinner-spinners.html
+++ b/views/jspinner/jspinner-spinners.html
@@ -1,5 +1,1 @@
-<ul class="spinners">
-	{{#spinners}}
-	<li data-css='{{css}}'><span class="top">{{name}}</span><span class="bottom">Ancho: {{width}}, Alto: {{height}}</li>
-	{{/spinners}}
-</ul>
+<ul class="spinners">{{#spinners}}<li data-css="{{css}}"><span class="top">{{name}}</span><span class="bottom">Ancho: {{width}}, Alto: {{height}}</span></li>{{/spinners}}</ul>
