--- a/views/jmain/jmain-nodos.html
+++ b/views/jmain/jmain-nodos.html
@@ -1,21 +1,7 @@
-<li>
-	<h3 class="main">Nodos HTML</h3>
-</li>
-<li>
-	<h3 class="title"><i class="fa fa-chevron-right "></i> fnClosest()</h3>
-	<div class="content">
-		<p>
-			Si estas acostumbrado a usar el DOM, sabrás que navegar entre nodos y padres nodos será algo no muy divertido, al final nuestro código quedará algo así <i>parentNode.parentNode.parentNode</i>, para organizar de mejor forma nuestro código existe esta función fnCloset.
-		</p>
-		<p>
-			Es similar a la función de JQuery closet(), la diferencia es el uso de querys nativas, las mismas que usas en CSS, ya que se trabaja con la interfaz querySelector, el resultado será algo más rápido que con JQuery.
-		</p>
-<pre><code>function fnPrint() {
+<li><h3 class="main">Nodos HTML</h3></li><li><h3 class="title"><i class="fa fa-chevron-right"></i> fnClosest()</h3><div class="content"><p>Si estas acostumbrado a usar el DOM, sabrás que navegar entre nodos y padres nodos será algo no muy divertido, al final nuestro código quedará algo así <i>parentNode.parentNode.parentNode</i>, para organizar de mejor forma nuestro código existe esta función fnCloset.</p><p>Es similar a la función de JQuery closet(), la diferencia es el uso de querys nativas, las mismas que usas en CSS, ya que se trabaja con la interfaz querySelector, el resultado será algo más rápido que con JQuery.</p><pre><code>function fnPrint() {
 	Array.prototype.slice.call(arguments).forEach(function(item) {
 		console.log(JSON.stringify(item));
 	});
 }; // end function fnPrint
 
-</code></pre>
-	</div>
-</li>
+</code></pre></div></li>
