--- a/views/polymer/iron-validatable-behavior/iron-validatable-behavior.html
+++ b/views/polymer/iron-validatable-behavior/iron-validatable-behavior.html
@@ -1,19 +1,4 @@
-<!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-meta/iron-meta.html">
-
-<script>
-
-  /**
+<link rel="import" href="../polymer/polymer.html"><link rel="import" href="../iron-meta/iron-meta.html"><script>/**
    * `Use Polymer.IronValidatableBehavior` to implement an element that validates user input.
    * Use the related `Polymer.IronValidatorBehavior` to add custom validation logic to an iron-input.
    *
@@ -129,6 +114,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       return true;
     }
-  };
-
-</script>
+  };</script>
